--- a/consultas/www/custom_404.html
+++ b/consultas/www/custom_404.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="error-page">
-	<img class="img-404" src="/files/404.png" />
+	<img class="img-404" src="/images/404.png" />
 	<div>
 		<h2 class="mb-1 mt-4">
 			There's nothing here
